MathExpr/library/z.output

/*********************************************************************
  Andre V.Kosteltsev (C) ZUBR Version - 3.0.0b. For Windows NT Console.
  Copyright (C) Andre V.Kosteltsev, 1995 - 1999. All rights reserved.

  This (verbose)file prodused by ZUBR for check grammar and
  working-out.
 *********************************************************************/

     0  $accept : list $end

     1  list :
     2       | list '\n'
     3       | list assign '\n'
     4       | list expr '\n'
     5       | list error '\n'

     6  assign : VAR '=' expr

     7  expr : NUMBER
     8       | VAR
     9       | VAR_BLTIN
    10       | assign
    11       | BLTIN '(' expr ')'
    12       | expr '+' expr
    13       | expr '-' expr
    14       | expr '*' expr
    15       | expr '/' expr
    16       | expr '^' expr
    17       | '(' expr ')'
    18       | '-' expr

/************************** End of Grammar ***************************/


state 0
            $accept : . list $end  (0)
            list : .  (1)

            .  reduce 1

            list  goto 1


state 1
            $accept : list . $end  (0)
            list : list . '\n'  (2)
            list : list . assign '\n'  (3)
            list : list . expr '\n'  (4)
            list : list . error '\n'  (5)

            $end  accept
            error  shift 2
            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '\n'  shift 8
            '('  shift 9
            .  error

            expr  goto 10
            assign  goto 11


state 2
            list : list error . '\n'  (5)

            '\n'  shift 12
            .  error


state 3
            expr : NUMBER .  (7)

            .  reduce 7


state 4
            assign : VAR . '=' expr  (6)
            expr : VAR .  (8)

            '='  shift 13
            '+'  reduce 8
            '-'  reduce 8
            '*'  reduce 8
            '/'  reduce 8
            '^'  reduce 8
            '\n'  reduce 8
            ')'  reduce 8


state 5
            expr : VAR_BLTIN .  (9)

            .  reduce 9


state 6
            expr : BLTIN . '(' expr ')'  (11)

            '('  shift 14
            .  error


state 7
            expr : '-' . expr  (18)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 15
            assign  goto 16


state 8
            list : list '\n' .  (2)

            .  reduce 2


state 9
            expr : '(' . expr ')'  (17)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 17
            assign  goto 16


state 10
            list : list expr . '\n'  (4)
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)

            '+'  shift 18
            '-'  shift 19
            '*'  shift 20
            '/'  shift 21
            '^'  shift 22
            '\n'  shift 23
            .  error


11: shift/reduce conflict (shift 24, reduce 10) on '\n'
state 11
            list : list assign . '\n'  (3)
            expr : assign .  (10)

            '\n'  shift 24
            '+'  reduce 10
            '-'  reduce 10
            '*'  reduce 10
            '/'  reduce 10
            '^'  reduce 10


state 12
            list : list error '\n' .  (5)

            .  reduce 5


state 13
            assign : VAR '=' . expr  (6)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 25
            assign  goto 16


state 14
            expr : BLTIN '(' . expr ')'  (11)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 26
            assign  goto 16


state 15
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)
            expr : '-' expr .  (18)

            '^'  shift 22
            '+'  reduce 18
            '-'  reduce 18
            '*'  reduce 18
            '/'  reduce 18
            '\n'  reduce 18
            ')'  reduce 18


state 16
            expr : assign .  (10)

            .  reduce 10


state 17
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)
            expr : '(' expr . ')'  (17)

            '+'  shift 18
            '-'  shift 19
            '*'  shift 20
            '/'  shift 21
            '^'  shift 22
            ')'  shift 27
            .  error


state 18
            expr : expr '+' . expr  (12)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 28
            assign  goto 16


state 19
            expr : expr '-' . expr  (13)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 29
            assign  goto 16


state 20
            expr : expr '*' . expr  (14)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 30
            assign  goto 16


state 21
            expr : expr '/' . expr  (15)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 31
            assign  goto 16


state 22
            expr : expr '^' . expr  (16)

            NUMBER  shift 3
            VAR  shift 4
            VAR_BLTIN  shift 5
            BLTIN  shift 6
            '-'  shift 7
            '('  shift 9
            .  error

            expr  goto 32
            assign  goto 16


state 23
            list : list expr '\n' .  (4)

            .  reduce 4


state 24
            list : list assign '\n' .  (3)

            .  reduce 3


state 25
            assign : VAR '=' expr .  (6)
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)

            '+'  shift 18
            '-'  shift 19
            '*'  shift 20
            '/'  shift 21
            '^'  shift 22
            '\n'  reduce 6
            ')'  reduce 6


state 26
            expr : BLTIN '(' expr . ')'  (11)
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)

            '+'  shift 18
            '-'  shift 19
            '*'  shift 20
            '/'  shift 21
            '^'  shift 22
            ')'  shift 33
            .  error


state 27
            expr : '(' expr ')' .  (17)

            .  reduce 17


state 28
            expr : expr . '+' expr  (12)
            expr : expr '+' expr .  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)

            '*'  shift 20
            '/'  shift 21
            '^'  shift 22
            '+'  reduce 12
            '-'  reduce 12
            '\n'  reduce 12
            ')'  reduce 12


state 29
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr '-' expr .  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)

            '*'  shift 20
            '/'  shift 21
            '^'  shift 22
            '+'  reduce 13
            '-'  reduce 13
            '\n'  reduce 13
            ')'  reduce 13


state 30
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr '*' expr .  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)

            '^'  shift 22
            '+'  reduce 14
            '-'  reduce 14
            '*'  reduce 14
            '/'  reduce 14
            '\n'  reduce 14
            ')'  reduce 14


state 31
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr '/' expr .  (15)
            expr : expr . '^' expr  (16)

            '^'  shift 22
            '+'  reduce 15
            '-'  reduce 15
            '*'  reduce 15
            '/'  reduce 15
            '\n'  reduce 15
            ')'  reduce 15


state 32
            expr : expr . '+' expr  (12)
            expr : expr . '-' expr  (13)
            expr : expr . '*' expr  (14)
            expr : expr . '/' expr  (15)
            expr : expr . '^' expr  (16)
            expr : expr '^' expr .  (16)

            '^'  shift 22
            '+'  reduce 16
            '-'  reduce 16
            '*'  reduce 16
            '/'  reduce 16
            '\n'  reduce 16
            ')'  reduce 16


state 33
            expr : BLTIN '(' expr ')' .  (11)

            .  reduce 11


State 11 contains 1 shift/reduce conflict.


17 terminals, 4 nonterminals
19 grammar rules, 34 states

/*************************** End of File *****************************/
